# pivoine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  dbstring.h  main.cpp  pivoine.qrc  record_player.h  track.h  unlock_check.h  vcpkg.json
.github/workflows/: build.yml
linux/: com.github.lumiscosity.Pivoine.desktop  com.github.lumiscosity.Pivoine.metainfo.xml  com.github.lumiscosity.Pivoine.yml
src/: book.h  book_data.cpp  book_data.h  book_text.h  cover.h  font.h  giant_vm.h  main.cpp  projectwindow.cpp  projectwindow.h  projectwindow.ui  record_player.h  reservation_list.h  snack.h  text.h  theme.h  track.cpp  track.h  validate_dialog.cpp  validate_rp_dialog.cpp  validate_rp_dialog.h  validate_rp_dialog.ui
src/data/: book_data.cpp  book_data.h  snack.cpp
src/generator/: book.h  cover.h  giant_vm.h  record_player.h  theme.h
src/ui/: project_window.cpp  project_window.h  project_window.ui  projectwindow.ui  validate_dialog.cpp  validate_dialog.h  validate_dialog.ui
src/validator/: common.h  record_player.h
